# command-line-calculator

./: .gitignore  CMakeLists.txt  Makefile  README.md  toy-app
src/: calculator.cpp  calculator.h  main.cpp
tests/: test_calculator.cpp
